# ClutterCutter

./: .gitignore  CHANGELOG.md  ClutterCutter.cs  README.md  TreeSizeLite.cs  build-icon.ps1  release-please-config.json
.github/: FUNDING.yml
.github/workflows/: build.yml  commit-lint.yml  lint-workflows.yml
rust/: Cargo.toml  app.rc  build.rs
rust/src/: analysis.rs  gui.rs  lib.rs  main.rs  mft.rs  scanner.rs  types.rs
