[package]
name = "cluttercutter"
version = "0.0.1"
edition = "2021"
publish = false
description = "Lightweight Windows disk-usage browser (Rust port)"

[[bin]]
name = "cluttercutter"
path = "src/main.rs"

[[bin]]
name = "cluttercutter-cli"
path = "src/bin/cli.rs"

[build-dependencies]
embed-resource = "2"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
